--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>goit-homework-03</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -74,6 +75,12 @@
             <!-- List -->
 
             <li class="feature-list">
+              <div class="icon-div">
+                <img src="images/Icon1.svg" alt="icon" />
+                <svg height="64" width="64">
+                  <use href="./images/Icon2.svg"></use>
+                </svg>
+              </div>
               <h3 class="our_features information">Strategy</h3>
               <p class="features-paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -82,6 +89,12 @@
             </li>
 
             <li class="feature-list">
+              <div class="icon-div">
+                <img src="images/Icon2.svg" alt="icon" />
+                <svg height="64" width="64">
+                  <use href="./images/Icon2.svg"></use>
+                </svg>
+              </div>
               <h3 class="our_features information">Punctuality</h3>
               <p class="features-paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -90,6 +103,12 @@
             </li>
 
             <li class="feature-list">
+              <div class="icon-div">
+                <img src="images/Icon3.svg" alt="icon" />
+                <svg height="64" width="64">
+                  <use href="./images/Icon3.svg"></use>
+                </svg>
+              </div>
               <h3 class="our_features information">Diligence</h3>
               <p class="features-paragraph">
                 Research and confirm brands that present the strongest digital
@@ -98,6 +117,12 @@
             </li>
 
             <li class="feature-list">
+              <div class="icon-div">
+                <img src="images/Icon4.svg" alt="icon" />
+                <svg height="64" width="64">
+                  <use href="./images/Icon4.svg"></use>
+                </svg>
+              </div>
               <h3 class="our_features information">Technologies</h3>
               <p class="features-paragraph">
                 Design practice focused on digital experiences. We bring forth a
