--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <img src="./images/what-we-do-001.jpg" alt="Monitor" />
             </li>
             <!-- Image 2-->
-            <li class="what-we-do-list">
+            <li class="what-we-do-list" z>
               <img src="./images/what-we-do-002.jpg" alt="Mobile Phone" />
             </li>
             <!-- Image 3 -->
