--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <img src="images/Icon1.svg" alt="icon" />
+                <!-- <img src="images/Icon1.svg" alt="icon" /> -->
                 <svg height="64" width="64">
                   <use href="./images/Icon2.svg"></use>
                 </svg>
@@ -90,7 +90,7 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <img src="images/Icon2.svg" alt="icon" />
+                <!-- <img src="images/Icon2.svg" alt="icon" /> -->
                 <svg height="64" width="64">
                   <use href="./images/Icon2.svg"></use>
                 </svg>
@@ -104,7 +104,7 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <img src="images/Icon3.svg" alt="icon" />
+                <!-- <img src="images/Icon3.svg" alt="icon" /> -->
                 <svg height="64" width="64">
                   <use href="./images/Icon3.svg"></use>
                 </svg>
@@ -118,7 +118,7 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <img src="images/Icon4.svg" alt="icon" />
+                <!-- <img src="images/Icon4.svg" alt="icon" /> -->
                 <svg height="64" width="64">
                   <use href="./images/Icon4.svg"></use>
                 </svg>
