--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <!-- <img src="images/Icon1.svg" alt="icon" /> -->
-                <svg height="64" width="64">
-                  <use href="./images/Icon2.svg"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#satellite"></use>
                 </svg>
               </div>
               <h3 class="our_features information">Strategy</h3>
@@ -90,9 +89,8 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <!-- <img src="images/Icon2.svg" alt="icon" /> -->
-                <svg height="64" width="64">
-                  <use href="./images/Icon2.svg"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="our_features information">Punctuality</h3>
@@ -105,8 +103,8 @@
             <li class="feature-list">
               <div class="icon-div">
                 <!-- <img src="images/Icon3.svg" alt="icon" /> -->
-                <svg height="64" width="64">
-                  <use href="./images/Icon3.svg"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="our_features information">Diligence</h3>
@@ -119,8 +117,8 @@
             <li class="feature-list">
               <div class="icon-div">
                 <!-- <img src="images/Icon4.svg" alt="icon" /> -->
-                <svg height="64" width="64">
-                  <use href="./images/Icon4.svg"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="our_features information">Technologies</h3>
