--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <!-- <img src="images/Icon3.svg" alt="icon" /> -->
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
@@ -116,7 +115,6 @@
 
             <li class="feature-list">
               <div class="icon-div">
-                <!-- <img src="images/Icon4.svg" alt="icon" /> -->
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
@@ -141,7 +139,7 @@
               <img src="./images/what-we-do-001.jpg" alt="Monitor" />
             </li>
             <!-- Image 2-->
-            <li class="what-we-do-list" z>
+            <li class="what-we-do-list">
               <img src="./images/what-we-do-002.jpg" alt="Mobile Phone" />
             </li>
             <!-- Image 3 -->
