--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
               <div class="employee">
                 <h3 class="our-team">Mark Guerrero</h3>
                 <p class="team">Product Designer</p>
+                <ul class="social-media">
+                  <li class="social-media-list">
+                    <a class="instagram" href="https://www.instagram.com/">
+                      <svg width="16" height="64">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
