--- a/index.html
+++ b/index.html
@@ -162,12 +162,42 @@
               <div class="employee">
                 <h3 class="our-team">Mark Guerrero</h3>
                 <p class="team">Product Designer</p>
-                <ul class="social-media">
+                <ul class="social-media list">
                   <li class="social-media-list">
-                    <a class="instagram" href="https://www.instagram.com/">
-                      <svg width="16" height="64">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="social-media-link"
+                    >
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://twitter.com/" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://facebook.com/" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="social-media-link"
+                    >
+                      <svg
+                        class="social-media-icon"
+                        width="16"
+                        height="16"
+                      ></svg>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </a>
                   </li>
                 </ul>
