--- a/index.html
+++ b/index.html
@@ -164,34 +164,28 @@
                 <p class="team">Product Designer</p>
                 <ul class="social-media list">
                   <li class="social-media-list">
-                    <a
-                      href="https://www.instagram.com/"
-                      class="social-media-link"
-                    >
+                    <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a href="https://twitter.com/" class="social-media-link">
+                    <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a href="https://facebook.com/" class="social-media-link">
+                    <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a
-                      href="https://www.linkedin.com/"
-                      class="social-media-link"
-                    >
+                    <a href="#" class="social-media-link">
                       <svg
                         class="social-media-icon"
                         width="16"
