--- a/index.html
+++ b/index.html
@@ -204,6 +204,39 @@
               <div class="employee">
                 <h3 class="our-team">Tom Ford</h3>
                 <p class="team">Frontend Developer</p>
+                <ul class="social-media list">
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg
+                        class="social-media-icon"
+                        width="16"
+                        height="16"
+                      ></svg>
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -213,6 +246,39 @@
               <div class="employee">
                 <h3 class="our-team">Camila Garcia</h3>
                 <p class="team">Marketing</p>
+                <ul class="social-media list">
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg
+                        class="social-media-icon"
+                        width="16"
+                        height="16"
+                      ></svg>
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -223,6 +289,35 @@
                 <h3 class="our-team">Daniel Wilson</h3>
                 <p class="team">UI Designer</p>
               </div>
+            </li>
+          </ul>
+          <ul class="social-media list">
+            <li class="social-media-list">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="16" height="16"></svg>
+                <use href="./images/icons.svg#linkedin"></use>
+              </a>
             </li>
           </ul>
         </div>
