--- a/index.html
+++ b/index.html
@@ -186,12 +186,9 @@
                   </li>
                   <li class="social-media-list">
                     <a href="#" class="social-media-link">
-                      <svg
-                        class="social-media-icon"
-                        width="16"
-                        height="16"
-                      ></svg>
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -228,12 +225,9 @@
                   </li>
                   <li class="social-media-list">
                     <a href="#" class="social-media-link">
-                      <svg
-                        class="social-media-icon"
-                        width="16"
-                        height="16"
-                      ></svg>
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -270,12 +264,9 @@
                   </li>
                   <li class="social-media-list">
                     <a href="#" class="social-media-link">
-                      <svg
-                        class="social-media-icon"
-                        width="16"
-                        height="16"
-                      ></svg>
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -315,10 +306,32 @@
             </li>
             <li class="social-media-list">
               <a href="#" class="social-media-link">
-                <svg class="social-media-icon" width="16" height="16"></svg>
-                <use href="./images/icons.svg#linkedin"></use>
+                <svg class="social-media-icon" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
               </a>
             </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Section 5 -->
+      <section class="section-five">
+        <div class="container">
+          <h2 class="customer-title">Customers</h2>
+          <ul class="customer-list">
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-icon"></li>
+            <li class="customer-icon"></li>
+            <li class="customer-icon"></li>
+            <li class="customer-icon"></li>
+            <li class="customer-icon"></li>
           </ul>
         </div>
       </section>
