--- a/index.html
+++ b/index.html
@@ -279,37 +279,37 @@
               <div class="employee">
                 <h3 class="our-team">Daniel Wilson</h3>
                 <p class="team">UI Designer</p>
+                <ul class="social-media list">
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-            </li>
-          </ul>
-          <ul class="social-media list">
-            <li class="social-media-list">
-              <a href="#" class="social-media-link">
-                <svg class="social-media-icon" width="16" height="16">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-list">
-              <a href="#" class="social-media-link">
-                <svg class="social-media-icon" width="16" height="16">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-list">
-              <a href="#" class="social-media-link">
-                <svg class="social-media-icon" width="16" height="16">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-list">
-              <a href="#" class="social-media-link">
-                <svg class="social-media-icon" width="16" height="16">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
             </li>
           </ul>
         </div>
@@ -319,7 +319,7 @@
       <section class="section-five">
         <div class="container">
           <h2 class="customer-title">Customers</h2>
-          <ul class="customer-list">
+          <ul class="customer-list list">
             <li class="customer-icon">
               <a class="customer-link" href="#">
                 <svg class="customer-svg" width="104" height="56">
@@ -339,15 +339,20 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-link web link" href="./index.html"
-          >Web<span class="footer-studio link">Studio</span></a
-        >
-        <p class="footer-paragraph">
-          Increase the flow of customers and <br />
-          sales for your business with digital<br />
-          marketing & growth solutions.
-        </p>
+      <div class="footer-content container">
+        <div class="logo-footer">
+          <a class="footer-link web link" href="./index.html"
+            >Web<span class="footer-studio link">Studio</span></a
+          >
+          <p class="footer-paragraph">
+            Increase the flow of customers and <br />
+            sales for your business with digital<br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-footer">
+          <p class="socmed-footer-paragraph">Social media</p>
+        </div>
       </div>
     </footer>
   </body>
