--- a/index.html
+++ b/index.html
@@ -327,11 +327,41 @@
                 </svg>
               </a>
             </li>
-            <li class="customer-icon"></li>
-            <li class="customer-icon"></li>
-            <li class="customer-icon"></li>
-            <li class="customer-icon"></li>
-            <li class="customer-icon"></li>
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-icon">
+              <a class="customer-link" href="#">
+                <svg class="customer-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -352,6 +382,24 @@
         </div>
         <div class="social-media-footer">
           <p class="socmed-footer-paragraph">Social media</p>
+          <ul class="socmed-footer-list list">
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#ig"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#x"></use>
+                </svg>
+              </a>
+            </li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </div>
     </footer>
