--- a/index.html
+++ b/index.html
@@ -397,8 +397,20 @@
                 </svg>
               </a>
             </li>
-            <li></li>
-            <li></li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#ln"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
