--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <h2 class="customer-title">Customers</h2>
           <ul class="customer-list list">
             <li class="customer-icon">
-              <a class="customer-link" href="#">
+              <a class="customer-link" href="">
                 <svg class="customer-svg" width="104" height="56">
                   <use href="./images/icons.svg#icon-1"></use>
                 </svg>
