--- a/portfolio.html
+++ b/portfolio.html
@@ -228,15 +228,50 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-link web link" href="./index.html"
-          >Web<span class="footer-studio link">Studio</span></a
-        >
-        <p class="footer-paragraph">
-          Increase the flow of customers and <br />
-          sales for your business with digital<br />
-          marketing & growth solutions.
-        </p>
+      <div class="footer-content container">
+        <div class="logo-footer">
+          <a class="footer-link web link" href="./index.html"
+            >Web<span class="footer-studio link">Studio</span></a
+          >
+          <p class="footer-paragraph">
+            Increase the flow of customers and <br />
+            sales for your business with digital<br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-footer">
+          <p class="socmed-footer-paragraph">Social media</p>
+          <ul class="socmed-footer-list list">
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#ig"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#x"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socmed-footer">
+              <a class="socmed-footer-link" href="#">
+                <svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#ln"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
