--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
           <ul class="portfolio-lists-two list">
             <!-- Banking-App -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/banking-app.jpg"
                   alt="banking-app"
@@ -102,7 +102,7 @@
 
             <!-- Cashless-Payment -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="cashless-payment"
@@ -117,7 +117,7 @@
 
             <!-- Meditation-App -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/meditation-app.jpg"
                   alt="meditation-app"
@@ -132,7 +132,7 @@
 
             <!-- Taxi-Service -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="taxi-Service"
@@ -147,7 +147,7 @@
 
             <!-- Screen-Illustrations -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="screen-illustrations"
@@ -162,7 +162,7 @@
 
             <!-- Online Courses -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/online-courses.jpg"
                   alt="online-courses"
@@ -177,7 +177,7 @@
 
             <!-- Instagram-Stories -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/instagram-stories.jpg"
                   alt="instagram-stories"
@@ -194,7 +194,7 @@
 
             <!-- Organic-Food -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/organic-food.jpg"
                   alt="organic-food"
@@ -209,7 +209,7 @@
 
             <!-- Fresh-Coffee -->
             <li class="portfolio-list">
-              <a class="portfolio-list-2-link link" href="#">
+              <a class="portfolio-list-two-link link" href="#">
                 <img
                   src="./images/fresh-coffee.jpg"
                   alt="fresh-coffee"
